--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.1",
     "react-ace": "^6.1.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "sanctuary": "^0.15.0"
   },
