--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Sanctuary Sandbox",
-  "name": "Sanctuary Sandboxe",
+  "name": "Sanctuary Sandbox",
   "icons": [
     {
       "src": "favicon.ico",
