--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "sanctuary": "^0.15.0"
+    "sanctuary": "^0.15.0",
+    "sanctuary-def": "^0.18.1"
   },
   "scripts": {
     "start": "react-scripts start",
