--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "sanctuary": "^0.15.0",
-    "sanctuary-def": "^0.18.1"
+    "sanctuary-def": "^0.18.1",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
