--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "daggy": "^1.2.0",
     "partial.lenses": "^13.13.2",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-ace": "^6.1.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "react-toastify": "^4.1.0",
+    "redux": "^4.0.0",
     "sanctuary": "^0.15.0",
     "sanctuary-def": "^0.18.1",
     "styled-components": "^3.3.3"
