--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "daggy": "^1.2.0",
+    "json-stringify": "^1.0.0",
     "partial.lenses": "^13.13.2",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
