--- a/package.json
+++ b/package.json
@@ -5,27 +5,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "daggy": "^1.2.0",
+    "daggy": "^1.3.0",
     "json-stringify": "^1.0.0",
-    "partial.lenses": "^13.13.2",
+    "partial.lenses": "^13.16.0",
     "ramda": "^0.25.0",
-    "react": "^16.4.1",
-    "react-ace": "^6.1.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.6.0",
+    "react-ace": "^6.2.0",
+    "react-dom": "^16.6.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
-    "react-toastify": "^4.1.0",
-    "redux": "^4.0.0",
+    "react-scripts": "^2.0.5",
+    "redux": "^4.0.1",
     "sanctuary": "^0.15.0",
     "sanctuary-def": "^0.18.1",
-    "styled-components": "^3.3.3"
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && surge -d sanctuaryjs.surge.sh -p build"
-  }
+    "deploy": "yarn build && surge -d sanctuaryjs.surge.sh -p build"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
