--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,26 @@
 {
-  "short_name": "🌴 FPJS",
-  "name": "🌴 FPJS",
+  "short_name": "🔮 FPJS",
+  "name": "🔮 FPJS",
   "description": "All things FP & JS",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#000000"
+  "theme_color": "#282a36",
+  "background_color": "#282a36"
 }
