--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "daggy": "^1.4.0",
     "json-stringify": "^1.0.0",
+    "lodash": "^4.17.13",
     "partial.lenses": "^14.17.0",
     "pratica": "^1.4.1",
     "ramda": "^0.26.1",
